Minor fix to the Smiley plugin to get it to work on IE (dropdown didn't display), and a tweak to the css for no scrollers. fixes #11054
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@22006 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/editor/plugins/resources/css/Smiley.css
+++ b/editor/plugins/resources/css/Smiley.css
@@ -15,6 +15,9 @@
 .dijitEditorSmileyPalette {
 	border: 1px solid black;
 	background: white;
+	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 .dijitEditorSmileyPalette .dijitPaletteCell {
